# AgePrediction-UTKFace

./: .flake8  .gitignore  .pre-commit-config.yaml  Age and Gender Prediction  Age_Estimation.ipynb  LICENSE  Makefile  README.md  environment.yml  paperspace_reqs.txt  pyproject.toml
.github/workflows/: test.yaml  test_deploy.yaml
notebooks/: b3fd.ipynb  check_distribution.ipynb  cross_validate.ipynb  evaluate.ipynb  prepare_b3fd.ipynb  utkface-age-regression.ipynb
src/: __init__.py  callbacks.py  dataset.py  ensemble.py  evaluate.py  evaluation.py  main.py  model.py  prepare.py  top_layer_architectures.py  train.py  utils.py  visualize.py
src/conf/: __init__.py  config.yaml
src/conf/dataset/: b3fd.yaml  utkface.yaml
src/conf/lr_schedule/: cosine_decay.yaml  exponential_decay.yaml
src/conf/model/: baselinecnn.yaml  convnext.yaml  customcnn.yaml  efficientnetv2-b0.yaml  efficientnetv2.yaml  efficientnetv2b0.yaml  inceptionresnetv2.yaml  linearmodel.yaml  resnet.yaml  senet50.yaml  vgg.yaml  vggface.yaml
src/conf/optimizer/: adam.yaml  adamw.yaml
src/custom_models/: __init__.py  baseline_cnn.py  convnext.py  custom_cnn.py  efficientnetv2.py  inceptionresnetv2.py  linear_model.py  resnet.py  senet50.py  vgg.py  vggface.py
src/datasets/: __init__.py  b3fd.py  utils.py  utkface.py
src/scripts/: cross_validate.py  evaluate.py  main.py  train.py
tests/: test_callbacks.py  test_config.py  test_main.py  test_model.py
